feat: updating docker file with newest havoc repo

--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -10,19 +10,15 @@ FROM debian:12.5
 RUN echo 'deb http://ftp.de.debian.org/debian bookworm main' >> /etc/apt/sources.list
 RUN apt update -y && apt upgrade -y
 #RUN apt install git curl wget python3-dev python3.10-dev libpython3.10 libpython3.10-dev python3.10 -y
-RUN apt install git curl wget python3 sudo
+RUN apt install -y git curl wget python3 sudo
 RUN apt install -y build-essential apt-utils cmake libfontconfig1 libglu1-mesa-dev libgtest-dev libspdlog-dev libboost-all-dev libncurses5-dev libgdbm-dev libssl-dev libreadline-dev libffi-dev libsqlite3-dev libbz2-dev mesa-common-dev qtbase5-dev qtchooser qt5-qmake qtbase5-dev-tools libqt5websockets5 libqt5websockets5-dev qtdeclarative5-dev golang-go qtbase5-dev libqt5websockets5-dev python3-dev libboost-all-dev mingw-w64 nasm
+RUN apt install -y libcap2-bin
 
 # Build havoc server
 RUN git clone https://github.com/HavocFramework/Havoc.git
-RUN cd Havoc
-RUN rm profile/havoc.yaotl
+RUN rm Havoc/profiles/havoc.yaotl
 COPY ./havoc.yaotl profiles/
-RUN cd teamserver/
-RUN go mod download golang.org/x/sys
-RUN go mod download github.com/ugorji/go
-RUN cd ..
-RUN make ts-build
+RUN cd Havoc/ && make ts-build
 
 # Create non-root user and set session 
 ARG DOCKER_USER=symbiont
